k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
