k8s/dev/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-egress
  namespace: dev

spec:
  podSelector: {}   # applies to all pods

  policyTypes:
  - Egress

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0   # allow all outgoing traffic
